--- a/email.html
+++ b/email.html
@@ -50,7 +50,7 @@
             *[class="100padtopbottom"] {width:100% !important; padding:20px 0px 20px 0px;}
         } 
     </style>
-
+	<link rel="icon" href="img/envelope.svg">
 </head>
 
 <body style="padding:0; margin:0">
